--- a/more-complex-chat-server/chat-client/package.json
+++ b/more-complex-chat-server/chat-client/package.json
@@ -11,17 +11,20 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
+    "@angular-devkit/schematics": "^11.0.3",
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
+    "@angular/core": "^5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/document-viewer": "^5.30.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
+    "@ionic/angular": "^5.5.1",
     "@ionic/storage": "2.2.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
