--- a/more-complex-chat-server/chat-client/package.json
+++ b/more-complex-chat-server/chat-client/package.json
@@ -2,41 +2,54 @@
   "name": "chat-client",
   "version": "0.0.1",
   "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
+  "homepage": "https://ionicframework.com/",
   "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^11.0.3",
-    "@angular/animations": "11.0.3",
-    "@angular/common": "11.0.3",
-    "@angular/compiler": "11.0.3",
-    "@angular/compiler-cli": "11.0.3",
-    "@angular/core": "^11.0.3",
-    "@angular/forms": "11.0.3",
-    "@angular/platform-browser": "11.0.3",
-    "@angular/platform-browser-dynamic": "11.0.3",
-    "@ionic-native/core": "4.20.0",
-    "@ionic-native/document-viewer": "^5.30.0",
-    "@ionic-native/splash-screen": "4.20.0",
-    "@ionic-native/status-bar": "4.20.0",
-    "@ionic/angular": "^5.5.1",
-    "@ionic/angular-toolkit": "^3.0.0",
-    "@ionic/storage": "2.2.0",
-    "ionic-angular": "3.9.9",
-    "ionicons": "3.0.0",
+    "@angular/common": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^5.0.0",
     "ngx-socket-io": "^3.2.0",
-    "rxjs": "6.6.3",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.10.3"
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
-    "typescript": "4.0.5"
+    "@angular-devkit/build-angular": "^0.1100.3",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@angular/language-service": "~10.0.0",
+    "@ionic/angular-toolkit": "^2.3.0",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.5"
   },
   "description": "An Ionic project"
 }
