--- a/more-complex-chat-server/chat-server/package.json
+++ b/more-complex-chat-server/chat-server/package.json
@@ -12,6 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:debug2": "nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -24,6 +25,7 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.5.5",
     "@nestjs/websockets": "^7.5.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
